Adicionando pesquisa de DDD

--- a/NossoBrasil/Views/Endereco/Index.cshtml
+++ b/NossoBrasil/Views/Endereco/Index.cshtml
@@ -1,10 +1,10 @@
-﻿<div class="container p-5 ">
+﻿<div class="container p-5 d-flex justify-content-center">
 
-    <form asp-action="Pesquisar" class="p-4 form-control d-flex flex-column justify-content-between align-items-center border-info border-4">
+    <form asp-action="Pesquisar" class="w-50 p-4 form-control d-flex flex-column justify-content-between align-items-center border-info border-3">
 
         <label class="form-label  text-uppercase mb-3 fw-bolder fs-3">Digite o cep</label>
         <input class="form-control mb-3" type="text" name="cep" placeholder="0000000"/>
-        <button class="btn btn-outline-primary btn-lg"  type="submit">Pesquisar</button>
+        <button class="btn btn-outline-info btn-lg"  type="submit">Pesquisar</button>
 
     </form>
 </div>
