--- a/NossoBrasil/Views/Shared/_Layout.cshtml
+++ b/NossoBrasil/Views/Shared/_Layout.cshtml
@@ -22,11 +22,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Endereco" asp-action="Index">Consultar CEP</a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Consultar Banco</a>
-                        </li>
+                        </li>*@
                          <li class="nav-item">
-                           <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Consultar DDD</a>
+                           <a class="nav-link text-dark" asp-area="" asp-controller="DDD" asp-action="Index">Consultar DDD</a>
                         </li>
                     </ul>
                 </div>
